--- a/master.css
+++ b/master.css
@@ -84,6 +84,20 @@
     padding: 20px 20px 70px;
     border-radius: 10px;
   }
+
+  @media (max-width: 767px) {
+    .container .box{
+      flex-direction: column;
+    }
+
+    .container .box .il{
+      width: 100%;
+    }
+
+    .container .box .il h1{
+      font-size: 25px;
+    }
+  }
   
   .container .box .il h1{
     margin: 0 0 15px;
