--- a/css/master.css
+++ b/css/master.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body{
 margin: 0;
 padding: 0;
@@ -20,6 +24,31 @@ background-size: 60px 60px;
 background-position: -5px -5px;
 }
 
+.ogrenci-sayisi{
+  position: relative;
+  color: #fff;
+  text-align: center;
+  background-color: #f99317b6;
+  padding: 5px 8px;
+  border-radius: 10px;
+  margin-left: 20px;
+  font-size: 14px;
+}
+
+.ogrenci-sayisi::before{
+  content: "";
+  box-sizing: content-box;
+  padding: 10px;
+  position: absolute;
+  top: -11px;
+  left: -11px;
+  width: 100%;
+  height: 100%;
+  background-color: #67503a37;
+  border-radius: 10px;
+
+}
+
 .search-div{
   width: fit-content;
   display: flex;
@@ -29,10 +58,21 @@ background-position: -5px -5px;
   
 }
 
+.search-div form{
+  background-color: #67503a37;
+  padding: 15px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+
+
 .search-div .searchBtn{
   background-color: #f99317b6;
-  width: 45px;
-  height: 45px;
+  width: 40px;
+  height: 40px;
   padding: 6px;
   border-radius: 50%;
   display: flex;
@@ -47,39 +87,66 @@ background-position: -5px -5px;
 
 .search-div div svg{
   fill: #ffffffc9;
-  width: 25px;
-  height: 25px;
-}
-
-.search-div form{
-  background-color: #67503a37;
-  padding: 20px;
-  border-radius: 10px;
-  display: flex;
-  gap: 10px;
+  width: 20px;
+  height: 20px;
 }
 
 
 .search-div form input{
   padding: 10px;
-  min-width: 300px;
+  min-width: 250px;
   border-radius: 3px;
   border: none;
+  height: 40px;
 }
 
-@media (max-width: 767px)  {
+@media (max-width: 500px)  {
+  .search-div {
+    gap: 12px;
+  }
+
   .search-div form input{
-    min-width: 200px;
-    padding: 0 5px 0 10px;
-    height: 40px;
+    min-width: 130px;
+    padding: 0 4px 0 6px;
+    height: 30px;
+    flex-shrink: 1;
   }
 
   .search-div form{
     padding: 10px;
+    gap: 4px;
+  }
+
+  .search-div div svg{
+    width: 15px;
+    height: 15px;
+  }
+
+  .search-div .searchBtn{
+    width: 30px;
+    height: 30px;
+  }
+
+  .ogrenci-sayisi{
+    padding: 3px 6px 4px;
+    margin-left: 0;
+    font-size: 11px;
+    margin-right: 8px;
+  }
+  
+  .ogrenci-sayisi::before{
+    box-sizing: content-box;
+    padding: 7px;
+    top: -7px;
+    left: -7px;
+    width: 100%;
+    height: 100%;
+  
   }
 }
 
 .svg-turkiye-haritasi {
+position: relative;
 max-width: 1140px;
 margin: 20px auto 0;
 text-align: center;
