--- a/css/charts-style.css
+++ b/css/charts-style.css
@@ -1,24 +1,366 @@
 
+
 body{
     background-image: url("../images/what-the-hex-dark.png");
 }
 
 
 
-footer {
+header {
     background-image: url("../images/what-the-hex-dark.png");
     background-size: 400px 400px;
     background-position: -50px -50px;
 }
 
 
-.charts {
-    padding: 30px;
-    width: 700px;
-    background-color: #ffffff;
+
+.informations {
+    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(100,43,115,1) 0%, transparent 150%);
+    color: #eee;
+    padding: 25px;
     border-radius: 10px;
-    margin: 60px auto 0;
+    margin-bottom: 20px;
+    line-height: 1.3;
+    font-weight: 500;
 }
 
+@media (max-width: 767px) {
+    .informations{
+        padding: 10px;
+    }
+}
+
+
+.charts{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 20px;
+}
+
+@media (min-width: 1200px) {
+    .charts{
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
+    }
+}
+
+
+.chartDiv{
+    flex-shrink: 1;
+    overflow: hidden;
+    width: 100%;
+    border-radius: 10px;
+    padding: 20px 30px;
+}
+
+
+@media (min-width: 1200px) {
+    .chartDiv{
+        width: calc(50% - 10px);
+    }
+}
+
+.classChartDiv{
+    background-image: radial-gradient( circle farthest-corner at 17.1% 22.8%,  rgb(178, 18, 18) 0%, rgb(111, 0, 0) 90% );    
+}
+
+.merkezlerChartDiv{
+    background-image: radial-gradient( circle farthest-corner at 17.1% 22.8%,  #7c560f 0%, #503607 90% );    
+}
+
+.bursChartDiv{
+    background-image: radial-gradient( circle farthest-corner at 17.1% 22.8%,  #20558d 0%, #062f5c 90% );    
+}
+
+.genclerChartDiv{
+    background-image: radial-gradient( circle farthest-corner at 17.1% 22.8%,  #22924b 0%, #045c24 90% );    
+
+}
+
+.chartDiv > h1{
+    color: #cccccc;
+    text-align: center;
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+    border-bottom: 2px #ccc solid;
+}
+
+.classChartDiv > h1 {
+    border-color: #600500;
+}
+
+.merkezlerChartDiv > h1 {
+    border-color: #523500;
+}
+
+.bursChartDiv > h1 {
+    border-color: #002853;
+}
+
+.genclerChartDiv > h1 {
+    border-color: #00532b;
+}
+
+@media (min-width: 1200px) {
+    .chartDiv > h1{
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 767px) {
+    .chartDiv > h1{
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 620px) {
+    .chartDiv > h1{
+        font-size: 18px;
+    }
+}
+
+.chart {
+    padding: 25px;
+    background-color: #eee;
+    border-radius: 10px;
+    margin: 0 auto ;
+}
+
+
+
+@media (min-width: 768px) {
+    .bursChart,
+    .genclerChart{
+        padding: 10px 25% 15px;
+    }
+}
+
+.charts .table{
+    margin-top: 20px;
+    transition: height 0.3s;
+    position: relative;
+}
+
+.charts .tableIcon{
+    position: relative;
+    height: 45px;
+    width: 100%; 
+    padding: 0 20px 0 0;
+    color: #cccccc;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+.charts .classChartDiv .tableIcon {
+    background-color: #600500;
+}
+
+.charts .merkezlerChartDiv .tableIcon {
+    background-color: #523500;
+}
+
+.charts .bursChartDiv .tableIcon {
+    background-color: #002853;
+}
+
+.charts .genclerChartDiv .tableIcon {
+    background-color: #00532b;
+}
+
+
+.charts .tableIcon span {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-weight: 600;
+    white-space: nowrap;
+}
+
+@media (max-width: 530px){
+    .charts .tableIcon span{
+        left: 10px;
+        transform: translateX(0);
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 455px) {
+    .charts .tableIcon span{
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 430px) {
+    .charts .tableIcon span{
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 410px) {
+    .charts .tableIcon span{
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 386px) {
+    .charts .tableIcon span{
+        font-size: 11px;
+    }
+}
+
+@media (max-width: 360px) {
+    .charts .tableIcon span{
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 340px) {
+    .charts .tableIcon span{
+        font-size: 9px;
+    }
+}
+
+.charts .tableIcon svg{
+    width: 25px;
+    visibility: hidden;
+    cursor: pointer;
+}
+
+.charts .tableIcon svg path{
+    fill: #cccccc;
+}
+
+/* --------------Table Info------------- */
+.charts .tableInfo{
+    overflow: auto;
+    /* display: none; */
+    min-width: 100%;
+    height: 0;
+    transition: height 0.3s;
+}
+
+.charts table{
+    border-spacing: 0;
+    width: 100%;
+    transition: height 0.3s ease-in-out;
+
+}
+
+
+.charts table td{
+    background-color: #ddd;
+    border: 1px solid #cccccc;
+    padding: 8px 10px;
+    white-space: nowrap;
+}
+
+.charts table thead td{
+    text-align: center;
+    font-weight: 600;
+}
+
+.charts .classChartDiv table thead td{
+    background-color: #cd9d9d;
+    border: 1px solid rgb(181, 123, 123)
+}
+
+.charts .merkezlerChartDiv table thead td{
+    background-color: #d0b5a1;
+    border: 1px solid #bc9e88;
+}
+
+.charts .bursChartDiv table thead td{
+    background-color: #8ea7c3;
+    border: 1px solid #748ead;
+}
+
+.charts .genclerChartDiv table thead td{
+    background-color: #99c8b1;
+    border: 1px solid #85b9a0;
+}
+
+@media (min-width: 1200px) {
+    .charts table td{
+        font-size: 12px;
+        padding: 4px 6px;
+    }
+}
+
+@media (max-width: 690px) {
+    .charts table td{
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 560px) {
+    .charts table td{
+        font-size: 14px;
+        padding: 6px 9px;
+    }
+}
+
+@media (max-width: 500px) {
+    .charts table td{
+        font-size: 13px;
+        padding: 5px 8px;
+    }
+}
+
+@media (max-width: 425px) {
+    .charts table td{
+        font-size: 12px;
+        padding: 4px 6px;
+    }
+}
+
+@media (max-width: 375px) {
+    .charts table td{
+        font-size: 11px;
+    }
+}
+
+@media (max-width: 325px) {
+    .charts table td{
+        font-size: 10px;
+    }
+}
+
+
+@media (max-width: 767px) {
+    .chartDiv{
+        padding: 10px;
+    }
+    .chart{
+        padding: 10px;
+    }
+    .bursChart,
+    .genclerChart{
+        padding: 10px 25% 15px;
+    }
+    .charts .table{
+        margin-top: 10px;
+    }
+    .charts .tableIcon{
+        height: 40px;
+        padding: 0 10px 0 0;
+    }
+}
+
+@media (max-width: 500px) {
+    .bursChart,
+    .genclerChart{
+        padding: 10px 20% 15px;
+    }
+}
+
+@media (max-width: 360px) {
+    .genclerChart{
+        padding: 10px 14% 15px;
+    }
+}
 
 
